--- a/projetos.html
+++ b/projetos.html
@@ -65,7 +65,7 @@
           </p>
 
       
-          <button> <A href="https://liomezini.github.io/MetePix/fafa.html" > MEUS PROJETOS </A></button>
+          <button> <A href="https://liomezini.github.io/MetePix/fafa.html" >METEPIX </A></button>
         </div>
       </div>
     </section>
